# RustBlog

./: Cargo.toml  Dockerfile  docker-compose.yaml
src/: main.rs  query.sql  routers.rs
src/controllers/: auth_controller.rs  mod.rs  post_controller.rs
src/middlewares/: auth.rs
src/models/: post.rs  user.rs
src/views/: mod.rs
templates/: base.html  index.html  login.html  post.html  register.html
