[package]
name = "wtf-sec-blog"
version = "0.1.0"
edition = "2024"

[dependencies]
bcrypt = "0.17.0"
actix-identity = "0.5"
actix-session =  { version="0.10.1", features = ["cookie-session"]}
actix-web = "4.10.2"
dotenv = "0.15.0"
tera = "1.20.0"
sqlx = {version = "0.8.4", features = ["mysql", "runtime-tokio-native-tls"]}
serde = { version = "1.0.219", features = ["derive"]}

